# Ledgera

./: .gitignore  CHANGELOG.md  FinAccountingApp.iss  FinAccountingApp.linux.spec  FinAccountingApp.spec  Ledgera.iss  Ledgera.linux.spec  Ledgera.spec  README.md  README_EN.md  app_paths.py  backup.py  bootstrap.py  config.py  currency_config.json  main.py  migrate_json_to_sqlite.py  pyproject.toml  pyrightconfig.json
app/: audit_runner.py  finance_service.py  import_support.py  preferences_service.py  record_service.py  repository.py  repository_protocols.py  secret_storage.py  services.py  use_case_support.py  use_cases.py  use_cases_analytics.py  use_cases_assets.py  use_cases_mandatory.py  use_cases_planning.py  use_cases_records.py
bridge/: ledgera_bridge.py
db/: schema.sql
docs/: alpha1_readiness.md  alpha2_readiness.md  architecture.md
domain/: budget.py  dashboard.py  distribution.py  records.py  reports.py  tags.py  transfers.py  update.py
gui/: combobox_compat.py  controller_import_support.py  controller_support.py  controllers.py  hotkeys.py  i18n.py  (+12 more)
rust/ledgera_engine/: Cargo.toml  pyproject.toml
rust/ledgera_engine/core/: Cargo.toml
rust/ledgera_engine/core/src/: lib.rs
rust/ledgera_engine/ffi/: Cargo.toml
rust/ledgera_engine/ffi/src/: lib.rs
rust/ledgera_engine/python/ledgera_core/: __init__.py  ledgera_core.pyi
rust/ledgera_engine/python/tests/: test_all.py
rust/ledgera_engine/storage/: Cargo.toml
rust/ledgera_engine/storage/benches/: metrics_engine.rs
rust/ledgera_engine/storage/src/: lib.rs  metrics.rs  timeline.rs
(+431 files in other folders)
