[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-accounting"
version = "2.0.0-beta.3"
description = "Financial accounting system"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "openpyxl==3.1.2",
]

[project.optional-dependencies]
pdf = [
    "reportlab==4.0.0",
]

[tool.setuptools]
py-modules = ["backup", "bootstrap", "config", "main", "migrate_json_to_sqlite", "version"]

[tool.setuptools.packages.find]
include = ["app*", "db*", "domain*", "gui*", "infrastructure*", "services*", "storage*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
exclude = ["^web/"]
